<resources>
    <string name="app_name">Silver Pay</string>
    <string name="loading">正在加载中...</string>
    <string name="safety_ensure">web</string>
    <string name="home">首页</string>
    <string name="mine">我的</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="button_ok">OK</string>
    <string name="viewfinderview_status_text1">将二维码放入框内，即可自动扫描</string>
    <string name="payment_code">收款码</string>
    <string name="richScan">扫一扫</string>
    <string name="balance">余额</string>
    <string name="my_two_dimensional_code">我的二维码</string>
    <string name="pay_to">付款给</string>
    <string name="pay_money">付款金额</string>
    <string name="money_symbol">＄</string>
    <string name="money_symbol_rmb">￥</string>
    <string name="input_money">输入金额</string>
    <string name="confirm_payment">确认付款</string>
    <string name="order_info">订单信息</string>
    <string name="pay_way">付款方式</string>
    <string name="order_money">订单金额</string>
    <string name="privilege_money">优惠金额</string>
    <string name="payment">付款</string>
    <string name="at_once_payment">立即付款</string>
    <string name="psd_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="tip_forget_psd">忘记密码?</string>
    <string name="forget_psd">忘记密码</string>
    <string name="user_register">注册用户</string>
    <string name="go_into_experience">进入体验</string>
    <string name="phone_empty">手机号不能为空</string>
    <string name="psd_empty">密码不能为空</string>
    <string name="register">注册</string>
    <string name="forgetpsd">忘记密码</string>
    <string name="retrieve_psd">找回密码</string>
    <string name="verify_identity">身份验证</string>
    <string name="next_step">下一步</string>
    <string name="tip_psd_setting">请设置6-20位数字和字母密码</string>
    <string name="first_input_psd">请输入密码</string>
    <string name="psd_again_hint">请再次输入密码</string>
    <string name="confirm_modify">确认修改</string>
    <string name="tip_new_psd">输入新登录密码</string>
    <string name="tip_new_payment_psd">输入新支付密码</string>
    <string name="payment_psd_hint">输入支付密码</string>
    <string name="confirm_payment_psd_hint">确认支付密码</string>
    <string name="tip_payment_psd">输入支付密码</string>
    <string name="head_portrait">头像</string>
    <string name="not_verify_name">点击登录</string>
    <string name="not_verify_id">体验更多功能</string>
    <string name="recharge">充值</string>
    <string name="balance_RMB">余额(元)</string>
    <string name="balance_dollar">余额($)</string>
    <string name="bill">账单</string>
    <string name="merchant_services">商家服务</string>
    <string name="bank_card">银行卡</string>
    <string name="not_tied_card">未绑卡</string>
    <string name="safety_management">安全管理</string>
    <string name="customer_service">客户服务</string>
    <string name="switch_language">切换语言</string>
    <string name="nothing">无</string>
    <string name="personal_info">个人信息</string>
    <string name="nickname">昵称</string>
    <string name="tied_phonenum">绑定手机号</string>
    <string name="tied_email">绑定邮箱</string>
    <string name="real_name_identify">实名认证</string>
    <string name="aleady_identify">已实名</string>
    <string name="tip_nickname_input">请输入英文昵称,限4-16个字符</string>
    <string name="save">保存</string>
    <string name="commit">提交</string>
    <string name="nickname_empty">昵称不能为空</string>
    <string name="success_tie_email">成功绑定邮箱</string>
    <string name="success_modify_nickname">成功修改昵称</string>
    <string name="fail_modify">修改失败</string>
    <string name="choose_pay">选择支付方式</string>
    <string name="account_balance">账户余额</string>
    <string name="account_balance_dollar">账户余额 ($)</string>
    <string name="service_protocol">服务协议</string>
    <string name="tip_yft_protocol">注册账号即代表您同意并遵守银付通</string>
    <string name="confirm_psd">确认密码</string>
    <string name="tip_psd_6to20">6-20位数字和字母密码</string>
    <string name="set_psd">设置密码</string>
    <string name="country_region">国家/地区</string>
    <string name="verifycode_hint">请输入验证码</string>
    <string name="phonenum">手机号</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="phone_verifycode_hint">请输入短信验证码</string>
    <string name="email_hint">请输入邮箱地址</string>
    <string name="email_verifycode_hint">请输入邮箱验证码</string>
    <string name="obtain_verifycode">获取验证码</string>
    <string name="verifycode_empty">验证码不能为空</string>
    <string name="email_empty">邮箱地址不能为空</string>
    <string name="phone_or_email">手机号/邮箱</string>
    <string name="verifycode">验证码</string>
    <string name="poe_empty">手机号或者邮箱不能为空</string>
    <string name="psd_confirm_empty">确认密码不能为空</string>
    <string name="psd_not_equal">密码不一致,请重新输入</string>
    <string name="modify_success">修改成功</string>
    <string-array name="languages">
        <item>@string/Chinese</item>
        <item>@string/English</item>
        <item>@string/Cambodia</item>
    </string-array>
    <string name="Chinese">中文</string>
    <string name="English">English</string>
    <string name="Cambodia">កម្ពុជា</string>
    <string name="hot_recommend">热门推荐</string>
    <string name="more">更多</string>
    <string name="permissions_tips">为了更好的给你提供服务需要手机权限，请前往设置—管理权限中打开</string>
    <string name="today_income_RMB">今日收入(元)</string>
    <string name="today_income_dollar">今日收入($)</string>
    <string name="default_balance_num">0.00</string>
    <string name="default_num">0</string>
    <string name="today_trade">今日交易</string>
    <string name="today_trade_unit">笔</string>
    <string name="today_customer">今日顾客</string>
    <string name="today_customer_unit">人</string>
    <string name="RMB">元</string>
    <string name="mine_bill">我的账单</string>
    <string name="recent_one_trade">最新一笔</string>
    <string name="account_check">对账</string>
    <string name="voice_prompt">语音提醒</string>
    <string name="commission">佣金</string>
    <string name="expect_more">期待更多</string>
    <string name="tip_voice_prompt">即时语音播报用户付款信息</string>
    <string name="region">地区</string>
    <string name="language_selection">语言选择</string>
    <string name="recharge_money">充值金额</string>
    <string name="pay_money_hint">请输入付款金额</string>
    <string name="cash_out">提现</string>
    <string name="tip_login_error">登录密码错误,请重新输入</string>
    <string name="cancel">取消</string>
    <string name="retry">重试</string>
    <string name="reset_login_psd">重置登录密码</string>
    <string name="reset_payment_psd">重置支付密码</string>
    <string name="exit">退出</string>
    <string name="tip_confirm_exit">确认要退出吗?</string>
    <string name="confirm">确定</string>
    <string name="regain">重新获取</string>
    <string name="input_login_psd_hint">请输入登录密码</string>
    <string name="confirm_login_psd_hint">确认登录密码</string>
    <string name="old_psd_empty">旧密码不能为空</string>
    <string name="new_psd_empty">新密码不能为空</string>
    <string name="again_new_psd_empty">确认新密码不能为空</string>
    <string name="newpsd_not_equal">新密码不一致,请重新输入</string>
    <string name="old_psd_hint">请输入旧密码</string>
    <string name="new_psd_hint">请输入新密码</string>
    <string name="confirm_new_psd_hint">请确认新密码</string>
    <string name="tip_six_psd">请输入六位数字密码</string>
    <string name="proposer">申请人</string>
    <string name="proposer_name_hint">请填写申请人姓名</string>
    <string name="contact_way">联系方式</string>
    <string name="phone_or_fixed_hint">请填写手机/固定电话</string>
    <string name="shop_name">店铺名称</string>
    <string name="shop_name_hint">请填写店铺名称</string>
    <string name="shop_address">店铺地址</string>
    <string name="province_and_city_hint">请选择省份、城市</string>
    <string name="detail_address_hint">请输入详细地址,如街道、楼牌号等</string>
    <string name="shop_photo">店铺照片</string>
    <string name="upload_shop_photo_hint">请上传店铺门头照片</string>
    <string name="commit_application">提交申请</string>
    <string name="tip_application_infomation">申请信息只能填写一份,请如实填写,我们将会在24小时内联系你,请注意接听来电。</string>
    <string name="sms_verify_success">短信验证成功</string>
    <string name="login_success">登录成功</string>
    <string name="tip_select_your_country_or_region">请选择您的国家或者地区</string>
    <string name="register_success">恭喜您注册成功!</string>
    <string name="register_fail">注册失败</string>
    <string name="scan_pays_me">扫一扫，向我付款</string>
    <string name="save_image">保存图片</string>
    <string name="collection_record">收款记录</string>
    <string name="merchant_balance">商家余额</string>
    <string name="payment_money">付款金额</string>
    <string name="actually_pay_rmb">实际支付人民币</string>
    <string name="need_to_pay">需付款</string>
    <string name="input_pay_psd">输入支付密码</string>
    <string name="platform_announcement">平台公告</string>
    <string name="trade_information">交易信息</string>
    <string name="news_center">消息中心</string>
    <string name="save_image_success">图片已保存至系统相册</string>
    <string name="fail">失败</string>
    <string name="merchant_services_tips">此功能仅限商家用户，继续使用，请开通商家服务。</string>
    <string name="history_bill">历史账单</string>
    <string name="daily_bills">每日账单</string>
    <string name="monthly_bills">每月账单</string>
    <string name="screen">筛选</string>
    <string name="string_in_memory">String in memory</string>
    <string name="bill_detalis">账单详情</string>
    <string name="trade_success">交易成功</string>
    <string name="trade_time">交易时间</string>
    <string name="order_num">订单号</string>
    <string name="all">全部</string>
    <string name="income">收入</string>
    <string name="out">支出</string>
    <string name="personal">个人</string>
    <string name="merchant">商家</string>
    <string name="choose_trade_type">选择交易类型</string>
    <string name="finish">完成</string>
    <string name="commited">已提交</string>
    <string name="wait_dealwith">等待处理</string>
    <string name="tip_commited">已提交申请,我们会尽快审核并与您联系</string>
    <string name="tip_no_tiedbankcard">您尚未绑定银行卡</string>
    <string name="add_bank_card">添加银行卡</string>
    <string name="unbind">解绑</string>
    <string name="tie_bankcard">绑定银行卡</string>
    <string name="name">姓名</string>
    <string name="name_hint">请输入姓名</string>
    <string name="ID_number">身份证号</string>
    <string name="ID_number_hint">请输入身份证号</string>
    <string name="deposit_bank">开户银行</string>
    <string name="select_depositbank_hint">请选择开户银行</string>
    <string name="bankcard_num">银行卡号</string>
    <string name="bankcard_num_hint">请输入银行卡号</string>
    <string name="reserved_phonenum_hint">请输入银行预留手机号码</string>
    <string name="tip_has_read_and_agree">我已经阅读并同意</string>
    <string name="protocol_yft_realname_tiedcard">银付通实名绑卡协议</string>
    <string name="select_depositbank">选择开户银行</string>
    <string name="union_pay_card">银联卡</string>
    <string name="not_union_pay_card">非银联卡</string>
    <string name="this_month">本月</string>
    <string name="money_dollars">金额($)</string>
    <string name="count">笔数</string>
    <string name="success_logout">成功退出</string>
    <string name="sum_to">共计</string>
    <string name="untapped">尚未开发</string>
    <string name="choose_bank_card">选择银行卡</string>
    <string name="actual_payment">实际付款</string>
    <string name="today_bill">今日账单</string>
    <string name="current_exchange_rate">当前汇率 1美元=6.3元人民币</string>
    <string name="succ_remove_bankcard">成功移除银行卡</string>
    <string name="fail_remove">移除失败</string>
    <string name="add_bankcard">添加银行卡</string>
    <string name="tip_confirm_unbind_bankcard">确认要解绑该银行卡吗</string>
    <string name="cash_out_money">提现金额</string>
    <string name="cash_out_tip">请输入提现金额</string>
    <string name="cash_out_all">全部提现</string>
    <string name="confirm_cash_out">确认提现</string>
    <string name="succ_retrievepsd">成功找回密码</string>
    <string name="succ_resetpsd">成功重置密码</string>
    <string name="select_region">选择地区</string>
    <string name="verifycode_sent">验证码已发送</string>
    <string name="reserved_phone_empty">预留手机号不能为空</string>
    <string name="resend">重新发送</string>
    <string name="tip_login_timeout">连接已超时，请重新登录</string>
    <string name="succ_bind_bankcard">成功绑定银行卡</string>
    <string name="do_not_cash_out">个人提现功能暂未开放</string>
    <string name="shop_phone">店铺照片</string>
</resources>