<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/all_bg"
    >

    <!-- set_payment_psd   spayment-->
    <LinearLayout
        android:id="@+id/spayment_headline"
        style="@style/reset_upper_tip"
        >
        <TextView
            android:id="@+id/tip_spayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_payment_psd"
            android:textSize="@dimen/text_size_20"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/tip_spayment_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_six_psd"
            android:textSize="@dimen/text_size_14"
            android:layout_marginTop="@dimen/_10dp"
            />
    </LinearLayout>



    <RelativeLayout
        android:id="@+id/frame_spayment"
        android:layout_below="@+id/spayment_headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/content_bg"
        >

        <RelativeLayout
            android:id="@+id/spayment_psd_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_spayment_psd"
                android:hint="@string/payment_psd_hint"
                style="@style/et_payment_psd"
                />
            <View
                android:layout_below="@+id/et_spayment_psd"
                style="@style/nomargin_divide_view"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/spayment_confirm_line"
            android:layout_below="@+id/spayment_psd_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_spayment_confirm"
                android:hint="@string/confirm_payment_psd_hint"
                style="@style/et_payment_psd"
                />

            <View
                android:layout_below="@+id/et_spayment_confirm"
                style="@style/nomargin_divide_view"/>

        </RelativeLayout>
    </RelativeLayout>



    <TextView
        android:id="@+id/tv_spayment_commit"
        android:layout_below="@+id/frame_spayment"
        android:text="@string/commit"
        style="@style/bottom_tv_btn"
        />


</RelativeLayout>