<?xml version="1.0" encoding="utf-8"?>
<com.wenjing.yinfutong.widget.MyScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/all_bg"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/reset_lpsd_headline"
            style="@style/reset_upper_tip"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_login_psd"
                android:textSize="@dimen/text_size_20"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_psd_setting"
                android:textColor="@color/hint_color"
                android:textSize="@dimen/text_size_14"
                android:layout_marginTop="@dimen/_10dp"
                />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/old_psd_line"
            android:layout_below="@+id/reset_lpsd_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/content_bg"
            >
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_reset_lpsd_oldpsd"
                android:hint="@string/old_psd_hint"
                style="@style/et_login_psd"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/new_psd_line"
            android:layout_below="@+id/old_psd_line"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/content_bg"
            >
            <RelativeLayout
                android:id="@+id/first_newpsd_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_rlpsd_first_newpsd"
                    android:hint="@string/new_psd_hint"
                    style="@style/et_login_psd"
                    />

                <View
                    android:layout_below="@+id/et_rlpsd_first_newpsd"
                    style="@style/nomargin_divide_view"
                    />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/again_newpsd_line"
                android:layout_below="@+id/first_newpsd_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_rlpsd_again_newpsd"
                    android:hint="@string/confirm_new_psd_hint"
                    style="@style/et_login_psd"
                    />
            </RelativeLayout>
        </RelativeLayout>


        <TextView
            android:id="@+id/tv_rlpsd_commit"
            android:layout_below="@+id/new_psd_line"
            android:text="@string/commit"
            style="@style/bottom_tv_btn"
            android:background="@drawable/gray_btn_normal"
            />
    </RelativeLayout>
</com.wenjing.yinfutong.widget.MyScrollView>